--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,9 @@
+# PostgreSQL Database Configuration
+DB_HOST=your_host
+DB_PORT=your_port
+DB_NAME=your_db_name
+DB_USER=your_db_username
+DB_PASSWORD=your_password
 # Database Configuration
 DATABASE_URL=postgresql://username:password@localhost:5432/project_management
 
